Fix z-index issue.

--- a/src/components/documents/ChoiceAnswer/Controls/styles.module.scss
+++ b/src/components/documents/ChoiceAnswer/Controls/styles.module.scss
@@ -23,5 +23,5 @@
 }
 
 .checkButton {
-    z-index: 9999;
+    z-index: 100;
 }
